# jeopardy_game

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
scripts/: load_dataset.py
src/jeopardy_game/: main.py  requirements.txt
src/jeopardy_game/api/: deps.py
src/jeopardy_game/api/routes/: agents.py  questions.py
src/jeopardy_game/app/: main.py
src/jeopardy_game/app/api/: __init__.py  deps.py
src/jeopardy_game/app/api/routes/: __init__.py  questions.py
src/jeopardy_game/app/core/: config.py
src/jeopardy_game/app/db/: base.py  session.py
src/jeopardy_game/app/models/: question.py
src/jeopardy_game/app/schemas/: verify.py
src/jeopardy_game/core/: config.py
src/jeopardy_game/db/: session.py
src/jeopardy_game/models/: question.py
src/jeopardy_game/schemas/: agent_play.py  question.py
src/jeopardy_game/services/: answer_checker.py  answer_verification.py  llm_verifier.py  openai_client.py
src/jeopardy_game/services/agents/: base.py  factory.py  llm_agent.py
tests/: conftest.py
tests/unit/api/routes/: test_question_endpoint.py  test_verify_answer_endpoint.py  test_verify_answer_llm.py
