# src/jeopardy_game/pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jeopardy-game"
version = "0.1.0"
description = "FastAPI + PostgreSQL + SQLAlchemy Jeopardy trivia API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Your Name" }]
dependencies = [
  "sqlalchemy==2.0.45",
  "fastapi==0.125.0",
  "uvicorn==0.38.0",
  "pydantic==2.12.5",
  "requests==2.32.5",
]

[project.urls]
Repository = "https://github.com/lubomir-angelov/jeopardy_game.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["jeopardy_game*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["jeopardy_game"]
